--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="take_photo">Take Photo</string>
     <string name="start_capture">Start Capture</string>
     <string name="stop_capture">Stop Capture</string>
+    <string name="translating">Translating ...</string>
+    <string name="captured_image">Captured image</string>
+    <string name="back_to_camera">Back to Camera</string>
 </resources>
